css/styles.css
/* ... */
.select-dropdown li:hover,
.select-dropdown li:focus {
  background-color: var(--dark-muddy-green);
  border-radius: 4px;
}

.select-dropdown.hidden,
.select-dropdown-wrapper:has(.select-dropdown.hidden) {
  display: none;
}

.select-button[aria-expanded="true"] .dropdown-arrow {
  transform: rotate(180deg);
}

/*#region Articles*/

.article-header {
  display: flex;
  flex-direction: column;
  gap: var(--space-lg);
  padding-top: 3rem;
}

.article-container {
  /*Page width stuff - may not be relevant later*/
  max-width: 100em;
  padding-inline: 3rem;
  margin-inline: auto;

  padding-block: 2rem;
  display: grid;
  grid-template-columns: 300px 1fr;
  align-items: start;
  gap: 2rem;
}

aside {
  display: flex;
  flex-direction: column;
  gap: var(--space-md);

  position: sticky;
  top: calc(var(--header-height) + 4em );
  
  max-height: 80vh;
}

aside h3 {
  justify-content: center;
}

.article-section {
  display: flex;
  align-self: stretch;
  width: 100%;
  flex-direction: column;
  gap: var(--space-lg);
  background-color: var(--surface-primary);
  padding: var(--space-lg) var(--space-ml);
  line-height: 1.6rem;
}

/*MOBILE ARTICLES*/

@media screen and (max-width :800px) {
  .article-container {
    grid-template-columns: 1fr;
    padding-inline: 2rem;
  }
}

/*#region table of contents*/

.toc-container {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  overflow-y: auto;

  border: var(--border-width-sm) solid var(--border-primary);
  background-color: var(--surface-nav);
}

nav.toc {
  flex-shrink: 1;
  overflow-y: auto;
}

nav.toc ol li {
  border-top: var(--border-action) solid 1px;
  border-bottom: var(--border-action) solid 1px;
}

nav.toc ol li a {
  color: var(--text-on-action);
}

.contentParent {
   cursor: pointer;
}

.contentParent .toc_nav_link i {
  font-size: var(--font-size-h4);
}

.contentParent.closed ol {
  display: none;
}

.contentParent.closed .toc_nav_link i {
  transform: rotate(-90deg);
}

.contentParent ol li .toc_nav_link{
  padding-left: 1.5em !important;
}

.contentParent ol li a:not(.contentParent ol li .toc_nav_link a) {
  padding-left: 3em !important;
}

.toc_nav_link {
  padding: var(--space-md);
  display: flex;
  align-items: center;
  gap: var(--space-sm);
}

.toc_nav_link:hover {
  background-color: var(--surface-action-hover);
  color: var(--text-action-hover);
}

.toc_nav_link:hover a {
  color: var(--text-action-hover);
}

nav.toc ol li a:only-child {
  padding: var(--space-md);
  display: flex;
  align-items: center;
  gap: var(--space-sm);
}

nav.toc ol li a:only-child:hover {
  background-color: var(--surface-action-hover);
  color: var(--text-action-hover);
}

/*nav.toc ol li ol {
  display: none;
}*/

/*TOC MOBILE*/
@media screen and (max-width :800px) {
  aside {
    z-index: 995;
  }
  aside {
  top: calc(var(--header-height) + 2em );
  }
  aside .back-to {
    width: fit-content;
  }
  aside:has(.toc-container.open){
    background-color: var(--surface-nav);
    width: 100%;
    height: 100%;
    max-height: 100%;
    position: fixed;
    top: var(--header-height);
    left: 0;
  }
  aside:has(.toc-container.open) .back-to {
    /*Remove the back button temporarily*/
    display: none;
  }
  .toc-container {
    position: relative;
    display: none;
  }
  .toc-container.open {
    display: flex;
  }
  .toc-container.open #contents {
    flex-grow: 0;
  }
  .toc-close {
    display: block;
    position: absolute; /* relative to its positioned parent */
    top: calc(90vh - var(--header-height)); /* starts below the bottom of the screen */
    bottom: 3rem; /* stops scrolling before the end */
    left: 2rem; /* offset from left hand side */
  }
  .toc-close__btn {
    position: -webkit-sticky; /* for Safari */
    position: sticky; /* 'relative' until element reaches ... */
    top: calc(90vh - var(--header-height)); /* 90% viewport height from the top, when it becomes 'fixed' - until its container toggles it back to 'relative' */
  }
}



/*#endregion table of contents*/

/*#region post metadata*/

.post-metadata-container {
  border-top: 1px solid var(--border-action);
  border-bottom: 1px solid var(--border-action);
  background-color: var(--surface-primary);
}

.post-metadata {
  display: flex;
  gap: var(--space-md);

  max-width: 100em;
  margin-inline: auto;
  padding-inline: 3rem;
  padding-block: 1rem;
}

.post-metadata .date {
  flex-grow: 1;
}

.post-metadata .tag {
  font-size: var(--font-size-body-sm);
  text-align: center;
  background-color: var(--surface-secondary);
  border: var(--border-width-sm) solid var(--border-secondary);
  padding: var(--space-xs) var(--space-md);
}

.post-tag { 
  color: var(--text-on-action);
}

/*#endRegion post metadata*/

article {
  display: flex;
  flex-direction: column;
  align-self: center;
  max-width: 60em;
  padding-top: 1.4rem;
  padding-bottom: 1.4rem;
  gap: 1.4rem;
}

article ul {
  list-style-type: disc;
  text-align: justify;
}

article p {
  text-align: justify;
  max-width: 100%;
}

/*#endregion Articles*/

/*#region Policies*/
.policy-list {
  width: 100%;

  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
  gap: 1.5rem;
  list-style: none;
  padding-left: 0;
}

.policy-card{
  border-bottom: 2px solid var(--bright-purple-colour);
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 1.5rem;
}

.policy-card img {
  display: flex;
  align-items: center;
  justify-content: center;
  aspect-ratio: 1/1;
  width: 100%;
  height: auto;
  max-width: 140px;
  min-width: 140px;
  overflow: hidden;
}

.policy-card div {
  display: flex;
  width: 100%;
  flex-direction: column;
  align-self: stretch;
  align-items: start;
  justify-content: center;
  gap: 1rem;
  padding-bottom: 1rem;
}
/* ... */

